--- a/index.html
+++ b/index.html
@@ -5,81 +5,188 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CryptiText</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="src/lz-string.min.js"></script>
     <script src="src/qrcode.min.js"></script>
-    <script>
-        // Fallback to CDN if local qrcode.min.js fails to load
-        if (typeof QRCode === 'undefined') {
-            var script = document.createElement('script');
-            script.src = 'https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js';
-            script.async = true;
-            document.head.appendChild(script);
-        }
-    </script>
-</head>
+    <script type="module" src="crypto.js"></script>
+    <script type="module" src="app.js"></script>
 </head>
 <body>
-    <div class="container">
-        <h1 id="title" aria-label="Application title">CryptiText</h1>
-        <div class="language-selector">
-            <label for="language">Select Language:</label>
-            <select id="language" aria-label="Select interface language">
-                <option value="en">English</option>
-                <option value="fr">French</option>
-                <option value="es">Spanish</option>
-                <option value="bn">Bengali</option>
-            </select>
-        </div>
-        <div class="input-group">
-            <label for="iterations">PBKDF2 Iterations:</label>
-            <select id="iterations" aria-label="Select encryption strength">
-                <option value="100000">100,000 (Fast)</option>
-                <option value="500000">500,000 (Balanced)</option>
-                <option value="1000000">1,000,000 (Secure)</option>
-            </select>
-        </div>
-        <div class="input-group">
-            <label for="text-input">Text to Encrypt/Decrypt:</label>
-            <textarea id="text-input" rows="5" placeholder="Enter text here" aria-label="Text to encrypt or decrypt"></textarea>
-            <span id="char-count" aria-live="polite">0 Characters, 0 Words</span>
-        </div>
-        <div class="input-group password-group">
-            <label for="password">Password:</label>
-            <div class="password-wrapper">
-                <input type="password" id="password" placeholder="Enter password" aria-label="Encryption password">
-                <button id="toggle-password" type="button" aria-label="Show or hide password">
-                    <span class="eye-icon">👁️</span>
-                </button>
+    <main class="container">
+        <section class="input-section">
+            <h1 id="title">CryptiText</h1>
+
+            <div class="input-group">
+                <label for="language">Select Language:</label>
+                <select id="language">
+                    <option value="en">English</option>
+                    <option value="fr">French</option>
+                    <option value="es">Spanish</option>
+                    <option value="bn">Bengali</option>
+                    <option value="ja">Japanese</option>
+                    <option value="ko">Korean</option>
+                </select>
             </div>
-        </div>
-        <div class="input-group">
-            <label for="auto-clear">Auto-Clear Output After 5 Minutes:</label>
-            <input type="checkbox" id="auto-clear" checked aria-label="Enable auto-clear output">
-        </div>
-        <div class="button-group">
-            <button id="encrypt-btn" aria-label="Encrypt the input text">Encrypt</button>
-            <button id="decrypt-btn" aria-label="Decrypt the input text">Decrypt</button>
-        </div>
-        <div id="spinner" class="spinner" style="display: none;" aria-live="polite">Processing...</div>
-        <div class="output-group">
-            <label for="output">Result:</label>
-            <textarea id="output" rows="5" readonly aria-label="Encryption or decryption result"></textarea>
-            <button id="copy-btn" aria-label="Copy result to clipboard">Copy</button>
-            <button id="share-btn" aria-label="Copy shareable link for encrypted text">Copy Link</button>
-        </div>
-        <div class="output-group">
-            <label for="share-message">Share Message:</label>
-            <textarea id="share-message" rows="2" placeholder="Add a note for sharing" aria-label="Custom share message"></textarea>
-            <button id="media-share-btn" aria-label="Share to social media or apps">Share to Media</button>
-            <button id="qr-btn" aria-label="Show QR code for shareable link">Show QR Code</button>
-            <label for="include-password">Include Password in Share Link:</label>
-            <input type="checkbox" id="include-password" aria-label="Include password in share link">
-        </div>
-        <div id="qr-code" style="display: none; text-align: center;"></div>
-        <p id="error" class="error" aria-live="polite"></p>
-        <div class="theme-toggle-group">
-            <button id="theme-toggle" aria-label="Toggle dark mode">Toggle Dark Mode</button>
+
+            <div class="input-group">
+                <label for="iterations">PBKDF2 Iterations:</label>
+                <select id="iterations">
+                    <option value="100000">100,000 (Fast)</option>
+                    <option value="500000">500,000 (Balanced)</option>
+                    <option value="1000000">1,000,000 (Secure)</option>
+                </select>
+                <span id="iterations-recommendation">Recommended: 100,000+</span>
+            </div>
+
+            <div class="input-group">
+                <label for="text-input">Text to Encrypt/Decrypt:</label>
+                <textarea id="text-input" placeholder="Enter text here or drag-and-drop .txt/.enc.txt"></textarea>
+                <div id="char-count">0 Characters, 0 Words</div>
+            </div>
+
+            <div class="input-group">
+                <label for="password">Password:</label>
+                <div class="password-container">
+                    <input type="password" id="password" placeholder="Enter password">
+                    <button id="toggle-password" aria-label="Show password">
+                        <span class="eye-icon">👁️</span>
+                    </button>
+                </div>
+            </div>
+
+            <div class="input-group">
+                <label for="star-id">Star ID (Password Fingerprint):</label>
+                <div class="star-id-container">
+                    <input type="text" id="star-id" readonly>
+                    <button id="copy-star-id" aria-label="Copy Star ID">
+                        <span class="copy-icon">📋</span>
+                    </button>
+                </div>
+            </div>
+
+            <div class="input-group">
+                <div class="checkbox-group">
+                    <input type="checkbox" id="hmac-check">
+                    <label for="hmac-check">Enable HMAC-SHA256 Integrity Check</label>
+                </div>
+            </div>
+
+            <div class="input-group">
+                <div class="checkbox-group">
+                    <input type="checkbox" id="auto-clear" checked>
+                    <label for="auto-clear">Auto-Clear Output After:</label>
+                </div>
+                <div class="sub-input">
+                    <input type="number" id="auto-clear-time" min="1" value="5">
+                    <span>minutes</span>
+                </div>
+            </div>
+
+            <div class="input-group">
+                <div class="checkbox-group">
+                    <input type="checkbox" id="auto-clear-clipboard" checked>
+                    <label for="auto-clear-clipboard">Auto-Clear Clipboard After:</label>
+                </div>
+                <div class="sub-input">
+                    <input type="number" id="auto-clear-clipboard-time" min="1" value="30">
+                    <span>seconds</span>
+                </div>
+            </div>
+
+            <div class="input-group">
+                <div class="checkbox-group">
+                    <input type="checkbox" id="auto-clear-inactivity" checked>
+                    <label for="auto-clear-inactivity">Auto-Clear Storage & Clipboard After Inactivity:</label>
+                </div>
+                <div class="sub-input">
+                    <input type="number" id="auto-clear-inactivity-time" min="1" value="10">
+                    <span>minutes</span>
+                </div>
+            </div>
+
+            <div class="input-group">
+                <div class="checkbox-group">
+                    <input type="checkbox" id="message-expiration" checked>
+                    <label for="message-expiration">Auto-Wipe Decrypted Output After:</label>
+                </div>
+                <div class="sub-input">
+                    <input type="number" id="message-expiration-time" min="1" value="5">
+                    <span id="message-expiration-minutes">minutes</span>
+                </div>
+            </div>
+
+            <input type="file" id="file-input" accept=".txt,.enc.txt" style="display: none;">
+        </section>
+
+        <section class="output-section">
+            <div class="output-tabs">
+                <div class="tab active" data-tab="plaintext">Plaintext</div>
+                <div class="tab" data-tab="base64">Base64</div>
+                <div class="tab" data-tab="qr">QR Code</div>
+            </div>
+
+            <div id="qr-code" class="hidden"></div>
+            <div class="input-group">
+                <label for="output">Result:</label>
+                <textarea id="output" readonly></textarea>
+            </div>
+
+            <div class="input-group">
+                <label for="share-message">Share Message:</label>
+                <textarea id="share-message" placeholder="Add a note for sharing"></textarea>
+            </div>
+
+            <div class="input-group">
+                <div class="checkbox-group">
+                    <input type="checkbox" id="include-password">
+                    <label for="include-password">Include Password in Share Link</label>
+                </div>
+            </div>
+
+            <div id="preview-url"><strong>Preview URL:</strong> <span></span></div>
+            <div id="qr-size"><strong>QR Size:</strong> <span>Low Complexity</span></div>
+        </section>
+
+        <section class="sidebar">
+            <div id="success" class="hidden"></div>
+            <div id="error" class="hidden"></div>
+            <button id="encrypt-btn">Encrypt</button>
+            <button id="decrypt-btn">Decrypt</button>
+            <button id="copy-btn">Copy</button>
+            <button id="share-btn">Copy Link</button>
+            <button id="media-share-btn">Share to Media</button>
+            <button id="qr-btn">Show QR Code</button>
+            <button id="download-btn">Download .enc.txt</button>
+            <button id="import-btn">Import .enc.txt</button>
+            <button id="theme-toggle">Switch to Light Mode</button>
+            <button id="help-btn">Help</button>
+            <button id="changelog-btn">Changelog</button>
+        </section>
+    </main>
+
+    <div id="spinner" class="hidden">Processing...</div>
+
+    <div id="help-modal" class="modal hidden">
+        <div class="modal-content">
+            <h2>Help</h2>
+            <p>Use CryptiText to securely encrypt and decrypt text. Enter your text and password, then choose to encrypt or decrypt. Use the QR code or share link to share encrypted messages securely.</p>
+            <p>Shortcuts: Ctrl+Enter (Encrypt), Ctrl+Shift+Enter (Decrypt), Ctrl+S (Share), Ctrl+Q (QR Code)</p>
+            <button id="close-help">Close</button>
         </div>
     </div>
-    <script type="module" src="app.js"></script>
+
+    <div id="changelog-modal" class="modal hidden">
+        <div class="modal-content">
+            <h2>Changelog</h2>
+            <p><strong>Version 1.0.0</strong>: Initial release with encryption, decryption, QR code generation, and multi-language support.</p>
+            <p><strong>Version 1.1.0</strong>: Added HMAC-SHA256 integrity check and auto-clear features.</p>
+            <p><strong>Version 1.2.0</strong>: Improved UI with dark/light mode toggle, removed Solarized/custom themes, aligned checkboxes inline with labels, moved all buttons to sidebar, added Star ID copy button, and fixed modal/panel toggles.</p>
+            <button id="close-changelog">Close</button>
+        </div>
+    </div>
+
+    <div id="help-panel" class="help-panel hidden">
+        <p>Shortcuts: Ctrl+Enter (Encrypt), Ctrl+Shift+Enter (Decrypt), Ctrl+S (Share), Ctrl+Q (QR Code)</p>
+        <button id="close-help-panel">Close</button>
+    </div>
 </body>
 </html>
